[gd_scene load_steps=17 format=3 uid="uid://cjanwm3sy2x37"]

[ext_resource type="Script" uid="uid://c1bs8ikiny0yk" path="res://Scripts/level_01.gd" id="1_aksfc"]
[ext_resource type="PackedScene" uid="uid://cyti38f0lagf2" path="res://Scenes/Prefabs/LevelFinishDoor.tscn" id="1_oqkjg"]
[ext_resource type="PackedScene" uid="uid://bjb3dx2x4bocm" path="res://Scenes/Levels/Level_02.tscn" id="2_0ac5u"]
[ext_resource type="PackedScene" uid="uid://w7m6tehvvy3g" path="res://Scenes/Prefabs/player.tscn" id="2_pay8t"]
[ext_resource type="PackedScene" uid="uid://bfmh3fm2de78o" path="res://Scenes/Prefabs/Coin.tscn" id="3_rrh80"]
[ext_resource type="Script" uid="uid://gb6x2ewg5bjj" path="res://Scripts/GameManager.gd" id="4_vgfkr"]
[ext_resource type="Texture2D" uid="uid://jaegp53ccc7w" path="res://Assets/Spritesheet/platformPack_tilesheet.png" id="5_wqbaa"]
[ext_resource type="Script" uid="uid://ysia4mm4m5ca" path="res://Scripts/GameUI.gd" id="6_66mfc"]
[ext_resource type="Texture2D" uid="uid://clreg520jah1j" path="res://Assets/platformPack_item008.png" id="7_j7jun"]
[ext_resource type="FontFile" uid="uid://qgc4vi5osk7v" path="res://Assets/Fonts/Star Choco.ttf" id="8_gwcy2"]
[ext_resource type="PackedScene" uid="uid://btq0cymy61xrc" path="res://Scenes/Prefabs/slime.tscn" id="11_5pmb1"]
[ext_resource type="PackedScene" uid="uid://cf27ib42p12u" path="res://Trap/spear_trap.tscn" id="12_xpj05"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gs0qk"]
texture = ExtResource("5_wqbaa")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, 32, 32, 32, -32, -32, -32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 16, -32, 16)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 0, -32, 0)
4:0/0 = 0
4:1/0 = 0
5:0/0 = 0
5:1/0 = 0
2:5/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_ywwrl"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_gs0qk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rndpx"]
texture = ExtResource("5_wqbaa")
texture_region_size = Vector2i(64, 64)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, 16, 0, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_2fcbi"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rndpx")

[node name="Level_01" type="Node2D"]
script = ExtResource("1_aksfc")

[node name="Trap" type="Node2D" parent="."]

[node name="Spear_Trap" parent="Trap" instance=ExtResource("12_xpj05")]
position = Vector2(3134, 403)
scale = Vector2(3, 3)

[node name="Spear_Trap2" parent="Trap" instance=ExtResource("12_xpj05")]
position = Vector2(3269, 404)
scale = Vector2(3, 3)

[node name="Spear_Trap3" parent="Trap" instance=ExtResource("12_xpj05")]
position = Vector2(3174, 403)
scale = Vector2(3, 3)

[node name="Spear_Trap4" parent="Trap" instance=ExtResource("12_xpj05")]
position = Vector2(3222, 403)
scale = Vector2(3, 3)

[node name="LevelFinishDoor" parent="." instance=ExtResource("1_oqkjg")]
z_index = 1
position = Vector2(3852, 402)
next_scene = ExtResource("2_0ac5u")

[node name="Player" parent="." instance=ExtResource("2_pay8t")]
z_index = 1
position = Vector2(150, 318)
gravity = 2.0

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(16, 36)
limit_left = 0
limit_bottom = 705
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_top_margin = 0.4
drag_right_margin = 0.4
drag_bottom_margin = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Coins" type="Node2D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("3_rrh80")]
position = Vector2(576, 406)

[node name="Coin2" parent="Coins" instance=ExtResource("3_rrh80")]
position = Vector2(712, 353)

[node name="Coin3" parent="Coins" instance=ExtResource("3_rrh80")]
position = Vector2(844, 408)

[node name="Level" type="Node2D" parent="."]

[node name="Ground" type="TileMap" parent="Level" groups=["Ground"]]
tile_set = SubResource("TileSet_ywwrl")
format = 2
layer_0/tile_data = PackedInt32Array(458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 524288, 196608, 0, 589824, 196608, 0, 589825, 196608, 0, 589826, 196608, 0, 589827, 196608, 0, 589828, 196608, 0, 655364, 196608, 0, 655363, 196608, 0, 655362, 196608, 0, 655361, 196608, 0, 655360, 196608, 0, 524289, 196608, 0, 524290, 196608, 0, 524291, 196608, 0, 524292, 196608, 0, 458765, 0, 0, 524301, 196608, 0, 589837, 196608, 0, 655373, 196608, 0, 458766, 0, 0, 524302, 196608, 0, 589838, 196608, 0, 655374, 196608, 0, 458767, 0, 0, 524303, 196608, 0, 589839, 196608, 0, 655375, 196608, 0, 458768, 0, 0, 524304, 196608, 0, 589840, 196608, 0, 655376, 196608, 0, 458769, 0, 0, 524305, 196608, 0, 589841, 196608, 0, 655377, 196608, 0, 458770, 0, 0, 524306, 196608, 0, 589842, 196608, 0, 655378, 196608, 0, 458771, 0, 0, 524307, 196608, 0, 589843, 196608, 0, 655379, 196608, 0, 458772, 0, 0, 524308, 196608, 0, 589844, 196608, 0, 655380, 196608, 0, 458773, 0, 0, 524309, 196608, 0, 589845, 196608, 0, 655381, 196608, 0, 655370, 196608, 0, 655371, 196608, 0, 655372, 196608, 0, 655365, 196608, 0, 655366, 196608, 0, 655367, 196608, 0, 655368, 196608, 0, 655369, 196608, 0, 458757, 0, 2, 458760, 0, 2, 458761, 0, 2, 458764, 0, 2, 720895, 196608, 0, 655359, 196608, 0, 589823, 196608, 0, 524287, 196608, 0, 458751, 196608, 0, 393215, 196608, 0, 327679, 196608, 0, 262143, 196608, 0, 196607, 196608, 0, 131071, 196608, 0, 65535, 196608, 0, 458774, 0, 0, 524310, 196608, 0, 589846, 196608, 0, 655382, 196608, 0, 458775, 0, 0, 524311, 196608, 0, 589847, 196608, 0, 655383, 196608, 0, 458776, 0, 0, 524312, 196608, 0, 589848, 196608, 0, 655384, 196608, 0, 458777, 0, 0, 524313, 196608, 0, 589849, 196608, 0, 655385, 196608, 0, 458778, 0, 0, 524314, 196608, 0, 589850, 196608, 0, 655386, 196608, 0, 458779, 0, 0, 524315, 196608, 0, 589851, 196608, 0, 655387, 196608, 0, 458780, 0, 0, 524316, 196608, 0, 589852, 196608, 0, 655388, 196608, 0, 458781, 0, 0, 524317, 196608, 0, 589853, 196608, 0, 655389, 196608, 0, 458782, 0, 0, 524318, 196608, 0, 589854, 196608, 0, 655390, 196608, 0, 458783, 0, 0, 524319, 196608, 0, 589855, 196608, 0, 655391, 196608, 0, 458784, 0, 0, 524320, 196608, 0, 589856, 196608, 0, 655392, 196608, 0, 458785, 0, 0, 524321, 196608, 0, 589857, 196608, 0, 655393, 196608, 0, 458786, 0, 0, 524322, 196608, 0, 589858, 196608, 0, 655394, 196608, 0, 458787, 0, 0, 524323, 196608, 0, 589859, 196608, 0, 655395, 196608, 0, 458788, 0, 0, 524324, 196608, 0, 589860, 196608, 0, 655396, 196608, 0, 458789, 0, 0, 524325, 196608, 0, 589861, 196608, 0, 655397, 196608, 0, 458790, 0, 0, 524326, 196608, 0, 589862, 196608, 0, 655398, 196608, 0, 458791, 0, 0, 524327, 196608, 0, 589863, 196608, 0, 655399, 196608, 0, 458792, 0, 0, 524328, 196608, 0, 589864, 196608, 0, 655400, 196608, 0, 458793, 0, 0, 524329, 196608, 0, 589865, 196608, 0, 655401, 196608, 0, 458794, 0, 0, 524330, 196608, 0, 589866, 196608, 0, 655402, 196608, 0, 458795, 0, 0, 524331, 196608, 0, 589867, 196608, 0, 655403, 196608, 0, 458796, 0, 0, 524332, 196608, 0, 589868, 196608, 0, 655404, 196608, 0, 458797, 0, 0, 524333, 196608, 0, 589869, 196608, 0, 655405, 196608, 0, 458798, 0, 0, 524334, 196608, 0, 589870, 196608, 0, 655406, 196608, 0, 458799, 0, 0, 524335, 196608, 0, 589871, 196608, 0, 655407, 196608, 0, 458800, 0, 0, 524336, 196608, 0, 589872, 196608, 0, 655408, 196608, 0, 458801, 0, 0, 524337, 196608, 0, 589873, 196608, 0, 655409, 196608, 0, 458802, 0, 0, 524338, 196608, 0, 589874, 196608, 0, 655410, 196608, 0, 458803, 0, 0, 524339, 196608, 0, 589875, 196608, 0, 655411, 196608, 0, 458804, 0, 0, 524340, 196608, 0, 589876, 196608, 0, 655412, 196608, 0, 458805, 0, 0, 524341, 196608, 0, 589877, 196608, 0, 655413, 196608, 0, 458806, 0, 0, 524342, 196608, 0, 589878, 196608, 0, 655414, 196608, 0, 458807, 0, 0, 524343, 196608, 0, 589879, 196608, 0, 655415, 196608, 0, 458808, 0, 0, 524344, 196608, 0, 589880, 196608, 0, 655416, 196608, 0, 458809, 0, 0, 524345, 196608, 0, 589881, 196608, 0, 655417, 196608, 0, 458810, 0, 0, 524346, 196608, 0, 589882, 196608, 0, 655418, 196608, 0, 458811, 0, 0, 524347, 196608, 0, 589883, 196608, 0, 655419, 196608, 0, 458812, 0, 0, 524348, 196608, 0, 589884, 196608, 0, 655420, 196608, 0, 458813, 0, 0, 524349, 196608, 0, 589885, 196608, 0, 655421, 196608, 0, 458814, 0, 0, 524350, 196608, 0, 589886, 196608, 0, 655422, 196608, 0, 458815, 0, 0, 524351, 196608, 0, 589887, 196608, 0, 655423, 196608, 0)

[node name="Traps" type="TileMap" parent="Level" groups=["Traps"]]
tile_set = SubResource("TileSet_2fcbi")
format = 2
layer_0/tile_data = PackedInt32Array(589836, 0, 5, 589835, 0, 5, 589834, 0, 5, 589833, 0, 5, 589832, 0, 5, 589831, 0, 5, 589830, 0, 5, 589829, 0, 5)

[node name="SpawnPoint" type="Marker2D" parent="Level"]
unique_name_in_owner = true
position = Vector2(174, 383)

[node name="TutorialText" type="Node2D" parent="."]

[node name="Movement" type="Label" parent="TutorialText"]
offset_left = 264.0
offset_top = 336.0
offset_right = 542.0
offset_bottom = 420.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "A & D To Move
Spacebar To Jump"

[node name="SetNextScene" type="Label" parent="TutorialText"]
offset_left = 1148.0
offset_top = 292.0
offset_right = 1452.0
offset_bottom = 335.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "Haha \"Easy\" right??"

[node name="SetNextScene2" type="Label" parent="TutorialText"]
offset_left = 1884.0
offset_top = 276.0
offset_right = 2389.0
offset_bottom = 357.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "Killing slime by jumping on them 
will give you score!!"
horizontal_alignment = 1

[node name="SetNextScene3" type="Label" parent="TutorialText"]
visible = false
offset_left = 2476.0
offset_top = 319.0
offset_right = 3087.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "Oh...
I forget to tell you about the trap TwT"
horizontal_alignment = 1

[node name="SetNextScene4" type="Label" parent="TutorialText"]
offset_left = 3544.0
offset_top = 293.0
offset_right = 4155.0
offset_bottom = 374.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "You ready?"
horizontal_alignment = 1

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("4_vgfkr")

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UserInterface"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_66mfc")

[node name="Score" type="Control" parent="UserInterface/GameUI"]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreTexture" type="TextureRect" parent="UserInterface/GameUI/Score"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 116.0
offset_bottom = 116.0
texture = ExtResource("7_j7jun")
stretch_mode = 4

[node name="ScoreLabel" type="Label" parent="UserInterface/GameUI/Score"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 104.0
offset_top = 42.0
offset_right = 148.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0.910156, 0.730469, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_gwcy2")
theme_override_font_sizes/font_size = 32
text = "x 3"

[node name="Slime" parent="." instance=ExtResource("11_5pmb1")]
position = Vector2(2134, 416)
